--- a/Html/Webpage.html
+++ b/Html/Webpage.html
@@ -14,25 +14,31 @@
 
 <nav id="nav">
   <ul id="nav-ul">
-    <li id="nav-ul-a"><a href="#">Sports</a></li>
-    <li id="nav-ul-a"><a href="#">Boxing</a></li>
-    <li id="nav-ul-a"><a href="#">Ping Pong</a></li>
+    <li id="nav-ul-a"><a href="http://www.espn.com/college-football/">Football</a></li>
+    <li id="nav-ul-a"><a href="http://www.espn.com/boxing/">Boxing</a></li>
+    <li id="nav-ul-a"><a href="http://www.espn.com/free-online-games/sports/_/gid/42/ping-pong">Ping Pong</a></li>
   </ul>
 </nav>
 
+</div>
+
+<div id="nav-bar">
+  <ui>Home</ui> <ui>About Us</ui> <ui>Content</ui> <ui>Contact Us</ui>
+</div>
+
 <article id="article">
   <h1>Canelo vs. Golovkin ends in a classic draw</h1>
-  <img src="http://www.trbimg.com/img-59bc8a8b/turbine/la-1505528454-fyvuuecyj9-snap-image/1600/1600x900" width=50%>
+  <img align="center" src="https://goo.gl/An4g36" width=50%>
   <p><i>September 17th 2017</i></p>
-  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
-  <p>London is the capital city of England. It is the most populous city in the  United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
-  <p>Standing on the River Thames, London has been a major settlement for two millennia, its history going back to its founding by the Romans, who named it Londinium.</p>
+  <p><strong>By: </strong>George J.</p>
+  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse quis lacus sem. Ut in diam aliquam, tincidunt augue a, fringilla nulla. Aenean imperdiet ipsum risus, ut rutrum urna pharetra in. Quisque mollis vestibulum ligula, in sollicitudin odio pretium et. Nulla facilisi. Nam molestie suscipit tortor, eget mattis nisi pulvinar in. Sed euismod purus a ipsum lobortis tincidunt. Suspendisse faucibus sagittis elit. Suspendisse non lacus sed elit tempus tincidunt.
+    Quisque aliquam, libero at sollicitudin egestas, turpis risus consequat velit, a lobortis orci justo in nibh. Integer maximus nunc in tincidunt malesuada. Etiam vulputate purus turpis, at aliquam ante efficitur sagittis. Sed bibendum facilisis augue, nec viverra nunc laoreet id. Mauris eu diam eget libero consequat cursus. Proin vulputate gravida odio, rutrum facilisis est pharetra et. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse euismod malesuada magna. In in fermentum ante. Aliquam fermentum eros nibh, eu blandit leo euismod et. Aliquam erat volutpat. Maecenas laoreet vehicula metus, a egestas erat. Pellentesque ullamcorper ex purus, quis fermentum justo consequat viverra. Vestibulum semper, ipsum quis consequat fermentum, nisi enim sagittis ex, eget placerat purus mauris a justo.
+    Sed quis ex sollicitudin, faucibus mauris eu, fringilla lorem. Aenean pharetra dui vel libero maximus condimentum. Quisque laoreet varius risus vel pellentesque. Proin lorem risus, blandit eget odio pellentesque, condimentum tincidunt tortor. Integer aliquam pellentesque lacus consequat consequat. Proin elementum libero non augue efficitur rutrum. Quisque vehicula finibus ipsum eu placerat. Duis hendrerit quis tellus sodales lobortis. Donec ac scelerisque ante. Sed ac risus sed mi gravida luctus.</p>
+    <p>Fusce turpis sapien, aliquet vitae dui nec, convallis luctus felis. Curabitur et nulla magna. Donec in efficitur lorem, at eleifend urna. Nam eleifend nisi vel gravida varius. Maecenas vel nibh at sapien gravida porttitor. Cras nec dui dui. Cras interdum lorem felis, vel tempor nulla condimentum eget. Nulla sed libero lacinia, accumsan sapien nec, euismod risus. Donec interdum id sem varius ornare. Quisque euismod elit at nulla tincidunt, at mollis dolor malesuada. Morbi semper purus a molestie volutpat. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus condimentum enim eget nunc cursus mollis. Maecenas volutpat turpis nibh, non lobortis ex pretium et.
+    In semper nisi eu ante molestie volutpat in id augue. Praesent a odio eget urna pretium iaculis et ut tellus. Vivamus porttitor, magna vitae sollicitudin finibus, sem mauris lacinia nibh, id convallis neque felis et turpis. Duis malesuada turpis id nisi euismod, sed scelerisque orci consequat. Aenean tincidunt mauris a ligula dapibus bibendum. In hac habitasse platea dictumst. Sed vitae nisi sed ipsum porttitor porttitor. Nullam eget lorem a tellus eleifend aliquet a ac dui. Praesent dui nulla, elementum vitae leo et, convallis rutrum justo. Praesent non nulla nibh. Praesent non hendrerit orci. Aenean id elit diam.</p>
 </article>
 
 <footer id="footer">Copyright &copy; GJones Productions</footer>
-
-</div>
 
 </body>
 </html>
